# BuilderPatternOff

./: .gitignore  CMakeLists.txt
include/: DonnerKebabBuilder.hpp  Kebab.hpp
main/: main.cpp
